[gd_scene load_steps=2 format=3 uid="uid://g9bq3c2r0uzym"]

[ext_resource type="Script" path="res://scripts/game_screen.gd" id="1"]

[node name="GameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="PanelContainer" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/TopBar"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="UI/TopBar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="ScoreLabel" type="Label" parent="UI/TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Score: 0"

[node name="CoinsLabel" type="Label" parent="UI/TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "üí∞ Coins: 0"

[node name="HighScoreLabel" type="Label" parent="UI/TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "High Score: 0"
horizontal_alignment = 2

[node name="GameArea" type="CenterContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameArea"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="UI/GameArea/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "üéØ Click Game"
horizontal_alignment = 1

[node name="Instructions" type="Label" parent="UI/GameArea/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Click the button as fast as you can!
Each click = 10 points + 1 coin"
horizontal_alignment = 1

[node name="ClickButton" type="Button" parent="UI/GameArea/VBoxContainer"]
custom_minimum_size = Vector2(300, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "CLICK ME!"

[node name="ActionsPanel" type="PanelContainer" parent="UI/GameArea/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/GameArea/VBoxContainer/ActionsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameArea/VBoxContainer/ActionsPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="UI/GameArea/VBoxContainer/ActionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game Actions:"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/GameArea/VBoxContainer/ActionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SaveButton" type="Button" parent="UI/GameArea/VBoxContainer/ActionsPanel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "üíæ Save Progress"

[node name="SubmitButton" type="Button" parent="UI/GameArea/VBoxContainer/ActionsPanel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "üì§ Submit Score"

[node name="ResetButton" type="Button" parent="UI/GameArea/VBoxContainer/ActionsPanel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "üîÑ Reset"

[node name="StatusLabel" type="Label" parent="UI/GameArea/VBoxContainer"]
layout_mode = 2
text = " "
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 60.0
text = "‚Üê Back"

[connection signal="pressed" from="BackButton" to="." method="_on_back_pressed"]
[connection signal="pressed" from="UI/GameArea/VBoxContainer/ClickButton" to="." method="_on_click_button_pressed"]
[connection signal="pressed" from="UI/GameArea/VBoxContainer/ActionsPanel/MarginContainer/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_pressed"]
[connection signal="pressed" from="UI/GameArea/VBoxContainer/ActionsPanel/MarginContainer/VBoxContainer/HBoxContainer/SubmitButton" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="UI/GameArea/VBoxContainer/ActionsPanel/MarginContainer/VBoxContainer/HBoxContainer/ResetButton" to="." method="_on_reset_pressed"]
